[project]
name = "TauPhahJi-Command"
version = "0.1.0"
dependencies = [
    "tai5-uan5_gian5-gi2_kang1-ku7",
]

[metadata]
license_file = "LICENSE"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"tauphahji_cmd" = "tauphahji_cmd"}

[tool.setuptools.packages.find]
where = ["."]
include = ["tauphahji_cmd"]
exclude = ["tshi"]

[bdist_wheel]
universal = 1
