[project]
name = "Tau-Phah-Ji-Command"
version = "0.1.0"

authors = [
  { name="A-hông", email="hong@ithuan.tw" },
]
description = "用指令叫鬥拍字"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "台語",
    "Taiwan",
    "Natural Language",
    "Corpus",
]

[project.urls]
"Homepage" = "https://github.com/i3thuan5/Tau-Phah-Ji-Command"

[metadata]
license_file = "LICENSE"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"tauphahji_cmd" = "tauphahji_cmd"}

[tool.setuptools.packages.find]
where = ["."]
include = ["tauphahji_cmd"]
exclude = ["tshi"]

[bdist_wheel]
universal = 1
